--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
+    "react-share": "^5.1.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "yup": "^1.4.0",
