--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "aos": "^2.3.4",
     "formik": "^2.4.6",
     "graphql": "^16.9.0",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-share": "^5.1.0",
